--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ input {
   padding: 2.5px 0 2.5px 10px;
 }
 
-.button {
+.calculate {
   border: none;
   border-radius: 5px;
   background-color: lime;
